KF code added (both KF for the proposed deep model and original KF with MLE. but original KF with EM is not implemented yet).

--- a/train_model.ipynb
+++ b/train_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -44,12 +44,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "T = 2000\n",
     "h_dim = 10\n",
     "train_data = np.zeros((int(T/2), 3*s_dim), np.float32)\n",
     "for i in range(int(T/2)):\n",
@@ -84,14 +85,33 @@
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "step: 900,\trecons loss: 254.4706,\tlikelihood: 38917.5179,\tclass loss: 2.6283\n",
+      "step: 1800,\trecons loss: 198.5761,\tlikelihood: 3441.9454,\tclass loss: 2.8915\n",
+      "step: 2700,\trecons loss: 77.5974,\tlikelihood: 3335.8399,\tclass loss: 2.8369\n",
+      "step: 3600,\trecons loss: 28.8468,\tlikelihood: 4190.3112,\tclass loss: 2.8102\n",
+      "step: 4500,\trecons loss: 27.2509,\tlikelihood: 4309.8198,\tclass loss: 2.7927\n",
+      "step: 5400,\trecons loss: 27.1478,\tlikelihood: 3512.1778,\tclass loss: 2.8339\n",
+      "step: 6300,\trecons loss: 27.2070,\tlikelihood: 4204.7217,\tclass loss: 2.8100\n",
+      "step: 7200,\trecons loss: 27.0305,\tlikelihood: 3773.8780,\tclass loss: 2.8080\n",
+      "step: 8100,\trecons loss: 26.9956,\tlikelihood: 3935.3244,\tclass loss: 2.8046\n",
+      "step: 9000,\trecons loss: 26.9597,\tlikelihood: 4431.0403,\tclass loss: 2.8162\n",
+      "step: 9900,\trecons loss: 26.8361,\tlikelihood: 4040.0165,\tclass loss: 2.8083\n",
+      "step: 10800,\trecons loss: 26.5221,\tlikelihood: 3642.8753,\tclass loss: 2.8154\n"
+     ]
+    }
+   ],
    "source": [
     "log_dir = './log/'\n",
     "os.popen('rm '+log_dir+'*')\n",
-    "minibatch_size = 256\n",
+    "minibatch_size = 128\n",
     "model = Model(s_dim, h_dim, minibatch_size, 1e-4, log_dir)\n",
     "iteration = 300\n",
-    "for epoch in range(85):\n",
+    "for epoch in range(56):\n",
     "    reconstruction_loss_train, likelihood_train, classify_loss_train = 0., 0., 0.\n",
     "    global_step = tf.contrib.framework.get_or_create_global_step()\n",
     "    # in each epoch 500 iterations\n",
@@ -130,15 +150,215 @@
     "                  transition_covariance = sig_2, \\\n",
     "                  observation_matrices = np.transpose(a_3),\\\n",
     "                  observation_covariance = sig_3)\n",
-    "est_o_t_p = model.sess.run(model.o_t_p, {model.input_tensor: test_data[:1000,]})\n",
+    "est_o_t_p = model.sess.run(model.o_t_p, {model.input_tensor: test_data})\n",
     "measurements = np.asarray(est_o_t_p)\n",
     "(est_s_t_p, est_s_t_p_covariances) = kf.filter(measurements)\n",
     "est_s_t = model.decode_s_t_p(est_s_t_p)\n",
-    "print(np.mean(np.linalg.norm(est_s_t - test_data[:1000, s_dim : 2*s_dim] , axis = 1)), end = '')\n",
+    "print(np.mean(np.linalg.norm(est_s_t - test_data[:, s_dim : 2*s_dim] , axis = 1)), end = '')\n",
     "print(' / ', end = '')\n",
-    "print(np.mean(np.linalg.norm(test_data[:1000, s_dim : 2*s_dim], axis = 1)))\n",
+    "print(np.mean(np.linalg.norm(test_data[:, s_dim : 2*s_dim], axis = 1)))\n",
     "print('mean consecutive diff: ', end='')\n",
-    "print(np.mean(np.linalg.norm(test_data[1:1000, s_dim : 2*s_dim] - test_data[:999, s_dim : 2*s_dim], axis = 1)))"
+    "print(np.mean(np.linalg.norm(test_data[1:, s_dim : 2*s_dim] - test_data[:-1, s_dim : 2*s_dim], axis = 1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "MaxIter = 100\n",
+    "train_T = train_data.shape[0]\n",
+    "s_t_minus_1_train = train_data[:,:s_dim]\n",
+    "s_t_train = train_data[:,s_dim:2*s_dim]\n",
+    "\n",
+    "sumStSt_1 = np.sum(\\\n",
+    "                   np.matmul(\\\n",
+    "                             np.reshape(s_t_train, [-1,s_dim,1]),\\\n",
+    "                             np.reshape(s_t_minus_1_train, [-1,1,s_dim])\\\n",
+    "                            ),axis=0\\\n",
+    "                  )\n",
+    "sumSt_1 = np.transpose(np.sum(s_t_minus_1_train, axis=0, keepdims=True))\n",
+    "sumSt = np.transpose(np.sum(s_t_train,axis=0,keepdims=True))\n",
+    "invsumSt_1St_1 = np.linalg.inv(\\\n",
+    "                               np.sum(\\\n",
+    "                                      np.matmul(\\\n",
+    "                                                np.reshape(s_t_minus_1_train, [-1,s_dim,1]),\\\n",
+    "                                                np.reshape(s_t_minus_1_train, [-1,1,s_dim])\\\n",
+    "                                               ),axis=0\\\n",
+    "                                     )\\\n",
+    "                              )\n",
+    "\n",
+    "A_2 = np.eye(s_dim)\n",
+    "b_2 = np.zeros([s_dim,1])\n",
+    "for iter in range(MaxIter):\n",
+    "    prev_A_2 = A_2\n",
+    "    prev_b_2 = b_2\n",
+    "    A_2 = np.matmul(\\\n",
+    "                    sumStSt_1 - np.matmul(b_2, np.transpose(sumSt_1)),\\\n",
+    "                    invsumSt_1St_1\\\n",
+    "                   )\n",
+    "    b_2 = (sumSt - np.matmul(A_2, sumSt_1)) / train_T\n",
+    "print(np.linalg.norm(A_2 - prev_A_2))\n",
+    "print(np.linalg.norm(b_2 - prev_b_2))\n",
+    "print('-------------------------')\n",
+    "tmp = s_t_train - np.matmul(s_t_minus_1_train, np.transpose(A_2)) - np.repeat(b_2.reshape([1,-1]),train_T,axis=0)\n",
+    "Sig_2 = np.mean(\\\n",
+    "                np.matmul(\\\n",
+    "                          np.reshape(tmp,[-1,s_dim,1]),\\\n",
+    "                          np.reshape(tmp,[-1,1,s_dim])\\\n",
+    "                         ),axis=0\\\n",
+    "               )\n",
+    "\n",
+    "o_t_train = train_data[:,2*s_dim:3*s_dim]\n",
+    "sumOtSt = np.sum(\\\n",
+    "                 np.matmul(\\\n",
+    "                           np.reshape(o_t_train,[-1,o_dim,1]),\\\n",
+    "                           np.reshape(s_t_train,[-1,1,s_dim])\\\n",
+    "                          ),axis=0\\\n",
+    "                )\n",
+    "invsumStSt = np.linalg.inv(\\\n",
+    "                           np.sum(\\\n",
+    "                                  np.matmul(\\\n",
+    "                                            np.reshape(s_t_train,[-1,s_dim,1]),\\\n",
+    "                                            np.reshape(s_t_train,[-1,1,s_dim])\\\n",
+    "                                           ),axis=0\\\n",
+    "                                 )\\\n",
+    "                          )\n",
+    "sumOt = np.transpose(np.sum(o_t_train,axis=0,keepdims=True))\n",
+    "A_3 = np.eye(o_dim, s_dim)\n",
+    "b_3 = np.zeros([o_dim,1])\n",
+    "for iter in range(MaxIter):\n",
+    "    prev_A_3 = A_3\n",
+    "    prev_b_3 = b_3\n",
+    "    A_3 = np.matmul(\\\n",
+    "                    sumOtSt - np.matmul(b_3, np.transpose(sumSt)),\\\n",
+    "                    invsumStSt\\\n",
+    "                   )\n",
+    "    b_3 = (sumOt - np.matmul(A_3, sumSt)) / train_T\n",
+    "print(np.linalg.norm(A_3 - prev_A_3))\n",
+    "print(np.linalg.norm(b_3 - prev_b_3))\n",
+    "print('+++++++++++++++++++++++++')\n",
+    "tmp = o_t_train - np.matmul(s_t_train, np.transpose(A_3)) - np.repeat(b_3.reshape([1,-1]),train_T,axis=0)\n",
+    "Sig_3 = np.mean(\\\n",
+    "                np.matmul(\\\n",
+    "                          np.reshape(tmp,[-1,o_dim,1]),\\\n",
+    "                          np.reshape(tmp,[-1,1,o_dim])\\\n",
+    "                         ),axis=0\\\n",
+    "               )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "kf_orig = KalmanFilter(initial_state_mean = np.transpose(np.matmul(test_data[0,:s_dim], np.transpose(A_3))), \\\n",
+    "                  initial_state_covariance = Sig_2, \\\n",
+    "                  transition_matrices = A_2, \\\n",
+    "                  transition_covariance = Sig_2, \\\n",
+    "                  observation_matrices = A_3,\\\n",
+    "                  observation_covariance = Sig_3)\n",
+    "measurements = test_data[:,2*s_dim:]\n",
+    "(est_s_t, est_s_t_covariances) = kf_orig.filter(measurements)\n",
+    "print(np.mean(np.linalg.norm(est_s_t - test_data[:, s_dim : 2*s_dim] , axis = 1)), end = '')\n",
+    "print(' / ', end = '')\n",
+    "print(np.mean(np.linalg.norm(test_data[:, s_dim : 2*s_dim], axis = 1)))\n",
+    "print('mean consecutive diff: ', end='')\n",
+    "print(np.mean(np.linalg.norm(test_data[1:, s_dim : 2*s_dim] - test_data[:-1, s_dim : 2*s_dim], axis = 1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "MaxIter = 100\n",
+    "train_T = train_data.shape[0]\n",
+    "s_t_minus_1_train = train_data[:,:s_dim]\n",
+    "s_t_train = train_data[:,s_dim:2*s_dim]\n",
+    "meanStSt_1 = np.mean(\\\n",
+    "                   np.matmul(\\\n",
+    "                             np.reshape(s_t_train, [-1,s_dim,1]),\\\n",
+    "                             np.reshape(s_t_minus_1_train, [-1,1,s_dim])\\\n",
+    "                            ),axis=0\\\n",
+    "                  )\n",
+    "meanSt_1 = np.transpose(np.mean(s_t_minus_1_train, axis=0, keepdims=True))\n",
+    "meanSt = np.transpose(np.mean(s_t_train,axis=0,keepdims=True))\n",
+    "invmeanSt_1St_1 = np.linalg.inv(\\\n",
+    "                               np.mean(\\\n",
+    "                                      np.matmul(\\\n",
+    "                                                np.reshape(s_t_minus_1_train, [-1,s_dim,1]),\\\n",
+    "                                                np.reshape(s_t_minus_1_train, [-1,1,s_dim])\\\n",
+    "                                               ),axis=0\\\n",
+    "                                     )\\\n",
+    "                              )\n",
+    "A_2 = np.eye(s_dim)\n",
+    "b_2 = np.zeros([s_dim,1])\n",
+    "for iter in range(MaxIter):\n",
+    "    prev_A_2 = A_2\n",
+    "    prev_b_2 = b_2\n",
+    "    A_2 = np.matmul(\\\n",
+    "                    meanStSt_1 - np.matmul(b_2, np.transpose(meanSt_1)),\\\n",
+    "                    invmeanSt_1St_1\\\n",
+    "                   )\n",
+    "    b_2 = meanSt - np.matmul(A_2, meanSt_1)\n",
+    "    #print(np.linalg.norm(A_2 - prev_A_2))\n",
+    "    #print(np.linalg.norm(b_2 - prev_b_2))\n",
+    "    #print('-------------------------')\n",
+    "tmp = s_t_train - np.matmul(s_t_minus_1_train, np.transpose(A_2)) - np.repeat(b_2.reshape([1,-1]),train_T,axis=0)\n",
+    "Sig_2 = np.mean(\\\n",
+    "                np.matmul(\\\n",
+    "                          np.reshape(tmp,[-1,s_dim,1]),\\\n",
+    "                          np.reshape(tmp,[-1,1,s_dim])\\\n",
+    "                         ),axis=0\\\n",
+    "               )\n",
+    "o_t_train = train_data[:,2*s_dim:3*s_dim]\n",
+    "meanOtSt = np.mean(\\\n",
+    "                 np.matmul(\\\n",
+    "                           np.reshape(o_t_train,[-1,o_dim,1]),\\\n",
+    "                           np.reshape(s_t_train,[-1,1,s_dim])\\\n",
+    "                          ),axis=0\\\n",
+    "                )\n",
+    "invmeanStSt = np.linalg.inv(\\\n",
+    "                           np.mean(\\\n",
+    "                                  np.matmul(\\\n",
+    "                                            np.reshape(s_t_train,[-1,s_dim,1]),\\\n",
+    "                                            np.reshape(s_t_train,[-1,1,s_dim])\\\n",
+    "                                           ),axis=0\\\n",
+    "                                 )\\\n",
+    "                          )\n",
+    "meanOt = np.transpose(np.mean(o_t_train,axis=0,keepdims=True))\n",
+    "A_3 = np.eye(o_dim, s_dim)\n",
+    "b_3 = np.zeros([o_dim,1])\n",
+    "for iter in range(MaxIter):\n",
+    "    prev_A_3 = A_3\n",
+    "    prev_b_3 = b_3\n",
+    "    A_3 = np.matmul(\\\n",
+    "                    meanOtSt - np.matmul(b_3, np.transpose(meanSt)),\\\n",
+    "                    invmeanStSt\\\n",
+    "                   )\n",
+    "    b_3 = meanOt - np.matmul(A_3, meanSt)\n",
+    "    #print(np.linalg.norm(A_3 - prev_A_3))\n",
+    "    #print(np.linalg.norm(b_3 - prev_b_3))\n",
+    "    #print('+++++++++++++++++++++++++')\n",
+    "tmp = o_t_train - np.matmul(s_t_train, np.transpose(A_3)) - np.repeat(b_3.reshape([1,-1]),train_T,axis=0)\n",
+    "Sig_3 = np.mean(\\\n",
+    "                np.matmul(\\\n",
+    "                          np.reshape(tmp,[-1,o_dim,1]),\\\n",
+    "                          np.reshape(tmp,[-1,1,o_dim])\\\n",
+    "                         ),axis=0\\\n",
+    "               )\n",
+    "'''"
    ]
   }
  ],
