Code for tuning the Gaussian parametrs of the model with MLE, simpleGaussian and simpleGaussian+offset has been added.

--- a/train_model.ipynb
+++ b/train_model.ipynb
@@ -85,14 +85,39 @@
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "step: 900,\trecons loss: 250.7180,\tlikelihood: 2540287.9455,\tclass loss: 2.3918\n",
+      "step: 1800,\trecons loss: 155.1894,\tlikelihood: 33900280.4292,\tclass loss: 1.4330\n",
+      "step: 2700,\trecons loss: 41.2168,\tlikelihood: 122120881.5600,\tclass loss: 1.6313\n",
+      "step: 3600,\trecons loss: 27.2019,\tlikelihood: 62764556.5917,\tclass loss: 1.2392\n",
+      "step: 4500,\trecons loss: 27.2755,\tlikelihood: 44404715.3875,\tclass loss: 1.6019\n",
+      "step: 5400,\trecons loss: 27.1946,\tlikelihood: 13228010.4481,\tclass loss: 1.2943\n",
+      "step: 6300,\trecons loss: 27.2388,\tlikelihood: 4981054.8861,\tclass loss: 1.6205\n",
+      "step: 7200,\trecons loss: 27.3754,\tlikelihood: 4421733.8765,\tclass loss: 1.4930\n",
+      "step: 8100,\trecons loss: 27.4860,\tlikelihood: 906193.7030,\tclass loss: 1.5911\n",
+      "step: 9000,\trecons loss: 28.8203,\tlikelihood: 1274219.1916,\tclass loss: 2.0031\n",
+      "step: 9900,\trecons loss: 31.0698,\tlikelihood: 6004064.3356,\tclass loss: 2.1690\n",
+      "step: 10800,\trecons loss: 30.2723,\tlikelihood: 3141571.3080,\tclass loss: 1.9431\n",
+      "step: 11700,\trecons loss: 33.0502,\tlikelihood: 2227098.1418,\tclass loss: 2.2924\n",
+      "step: 12600,\trecons loss: 30.4578,\tlikelihood: 1497215.0326,\tclass loss: 2.2442\n",
+      "step: 13500,\trecons loss: 32.1590,\tlikelihood: 1820283.3520,\tclass loss: 2.6915\n",
+      "step: 14400,\trecons loss: 30.5569,\tlikelihood: 1450129.7910,\tclass loss: 2.4595\n",
+      "step: 15300,\trecons loss: 31.7983,\tlikelihood: 592614.2266,\tclass loss: 2.4076\n",
+      "step: 16200,\trecons loss: 36.2768,\tlikelihood: 1757132.0565,\tclass loss: 2.4479\n"
+     ]
+    }
+   ],
    "source": [
     "log_dir = './log/'\n",
     "os.popen('rm '+log_dir+'*')\n",
     "minibatch_size = 128\n",
     "model = Model(s_dim, h_dim, minibatch_size, 1e-4, log_dir)\n",
     "iteration = 300\n",
-    "for epoch in range(56):\n",
+    "for epoch in range(84):\n",
     "    reconstruction_loss_train, likelihood_train, classify_loss_train = 0., 0., 0.\n",
     "    global_step = tf.contrib.framework.get_or_create_global_step()\n",
     "    # in each epoch 500 iterations\n",
@@ -124,12 +149,17 @@
    "source": [
     "last_s_p = np.asarray(model.sess.run([model.s_t_p], {model.input_tensor: train_data[train_data.shape[0]-2 : ,:]}))[0][1,:]\n",
     "\n",
-    "a_2, sig_2, a_3, sig_3 = model.sess.run([model.a_2, model.sigma_2, model.a_3, model.sigma_3])\n",
-    "kf = KalmanFilter(initial_state_mean = np.transpose(np.matmul(last_s_p,a_2)), \\\n",
+    "a_2, b_2, sig_2, a_3, b_3, sig_3 = model.sess.run([model.a_2, model.b_2, model.sigma_2,\\\n",
+    "                                                    model.a_3, model.b_3, model.sigma_3],\\\n",
+    "                                                   {model.input_tensor: train_data}\\\n",
+    "                                                  )\n",
+    "kf = KalmanFilter(initial_state_mean = np.transpose(np.matmul(last_s_p,a_2) + b_2), \\\n",
     "                  initial_state_covariance = sig_2, \\\n",
     "                  transition_matrices = np.transpose(a_2), \\\n",
+    "                  transition_offsets = b_2,\n",
     "                  transition_covariance = sig_2, \\\n",
     "                  observation_matrices = np.transpose(a_3),\\\n",
+    "                  observation_offsets = b_3,\n",
     "                  observation_covariance = sig_3)\n",
     "est_o_t_p = model.sess.run(model.o_t_p, {model.input_tensor: test_data})\n",
     "measurements = np.asarray(est_o_t_p)\n",
@@ -144,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -219,20 +249,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10.8454070116 / 146.895\n",
-      "mean consecutive diff: 17.6575\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "kf_orig = KalmanFilter(\\\n",
     "                       initial_state_mean =\\\n",
@@ -258,7 +279,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
